--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="SHARED_PREFERENCES_FIRST_USE_BOOLEAN" translatable="false">IS_FIRST_USE</string>
     <string name="INTENT_TAG_TO_CART_ACTIVITY" translatable="false">TAG_TO_CART_ACTIVITY</string>
     <string name="INTENT_TAG_FROM_CART_ACTIVITY" translatable="false">TAG_FROM_CART_ACTIVITY</string>
+    <string name="food_image">Food Image</string>
+    <string name="orderSubmitted">Order Submitted</string>
 
 
 </resources>
